--- a/aboutme1.html
+++ b/aboutme1.html
@@ -12,10 +12,10 @@
     <img src="images/me.jpg" height="300">
     <p>This is me. Hi.</p>
     <p></p>
-    <ima src="images/rg1.jpg" height="300">
-    <ima src="images/rg2.jpg" height="300">
+    <img src="images/rg1.jpg" height="300">
+    <img src="images/rg2.jpg" height="300">
     <p>I used to do rhythmic gymnastics.</p>
-    <ima src="images/estonia.jpg" height="300">
+    <img src="images/estonia.jpg" height="300">
     <p>I went to Estonia one time. It was cool.</p>
   </body>
 </html>
