--- a/aboutme.html
+++ b/aboutme.html
@@ -59,10 +59,10 @@ li a:hover:not(.active) {
     <br>
     <br>
     <h1 style="text-align:center">About Me</h1>
-    <p style="text-align:center;"><img src="images/me.jpg" height="200"></p>
+    <p style="text-align:center;"><img src="images/me.JPG" height="200"></p>
     <p style="text-align:center">This is me. Hi.</p>
     <br>
-    <p style="text-align:center;"><img src="images/rg3.jpg" height="300"> <img src="images/rg1.jpg" height="300"> <img src="images/rg2.jpg" height="300"></p>
+    <p style="text-align:center;"><img src="images/rg3.JPG" height="300"> <img src="images/rg1.JPG" height="300"> <img src="images/rg2.JPG" height="300"></p>
     <p style="text-align:center">I used to do rhythmic gymnastics. <br>Check out my gym's website if you're bored: <a href="http://emeraldcityrhythmics.com/" target="blank">Emerald City Rhythmics</a></p>
     <p style="text-align:center">I also used to do aesthetic group gymnastics.</p>
     <br>
