--- a/aboutme.html
+++ b/aboutme.html
@@ -41,8 +41,7 @@ li a:hover:not(.active) {
 }
 
 .active {
-    color: black;
-    background-color: #ffc6b3;
+  background-color: #ffc6b3;
 }
 
 </style>
@@ -61,6 +60,7 @@ li a:hover:not(.active) {
     <h1 style="text-align:center">About Me</h1>
     <p style="text-align:center;"><img src="images/me.JPG" height="200"></p>
     <p style="text-align:center">This is me. Hi.</p>
+    <p>Fun Fact About Me:<br>I'm short.</p>
     <br>
     <p style="text-align:center;"><img src="images/rg3.JPG" height="300"> <img src="images/rg1.JPG" height="300"> <img src="images/rg2.JPG" height="300"></p>
     <p style="text-align:center">I used to do rhythmic gymnastics. <br>Check out my gym's website if you're bored: <a href="http://emeraldcityrhythmics.com/" target="blank">Emerald City Rhythmics</a></p>
