--- a/mysister.html
+++ b/mysister.html
@@ -41,8 +41,7 @@ li a:hover:not(.active) {
 }
 
 .active {
-    color: black;
-    background-color: #ffc6b3;
+    background-color: #ff9933;
 }
 
 </style>
