--- a/portfolio.html
+++ b/portfolio.html
@@ -35,13 +35,12 @@ li a {
     text-decoration: none;
 }
 
-li a:hover {
+li a:hover:not(.active) {
     background-color: #e6e6e6;
 }
 
 .active {
-    color: black;
-    background-color: #ffc6b3;
+    background-color: #ff9933;
 }
 
 </style>
