--- a/aboutme.html
+++ b/aboutme.html
@@ -51,7 +51,7 @@ li a:hover:not(.active) {
     <li><a href="index.html">Home</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
     <li><a href="aboutme.html">About Me</a></li>
-    <li><a href="mysister.html">My Sister</a></li> 
+ 
     <li><a href="survey.html">My Surveys</a></li> 
   </ul> 
   <div id="grad"> 
@@ -60,7 +60,7 @@ li a:hover:not(.active) {
     <h1 style="text-align:center">About Me</h1>
     <p style="text-align:center;"><img src="images/me.JPG" height="200"></p>
     <p style="text-align:center">This is me. Hi.</p>
-    <p>Fun Fact About Me:<br>I'm short.</p>
+    <p style="text-align:center">Fun Fact About Me:<br>I'm short.</p>
     <br>
     <p style="text-align:center;"><img src="images/rg3.JPG" height="300"> <img src="images/rg1.JPG" height="300"> <img src="images/rg2.JPG" height="300"></p>
     <p style="text-align:center">I used to do rhythmic gymnastics. <br>Check out my gym's website if you're bored: <a href="http://emeraldcityrhythmics.com/" target="blank">Emerald City Rhythmics</a></p>
