--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ li a:hover:not(.active) {
     <br>
     <h1 style="text-align:center">Home Page</h1>
     <p style="text-align:center;"><img src="images/home.jpg" height="300"></p>
-    <p style="text-align:center">This is definitely my house.</p>
+    <p style="text-align:center">I live here.</p>
   </div>
   </body>
 </html>
