--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
     <title>Home</title>
 <style>
 
-body {margin:0;}
+//body {margin:0;}
 
 #grad {
 height: 2000px;
@@ -51,7 +51,8 @@ li a:hover:not(.active) {
     <li><a href="index.html">Home</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
     <li><a href="aboutme.html">About Me</a></li>
- 
+  //<li><a href="mysister.html">My Sister</a></li> 
+  //<li><a href="survey.html">My Surveys</a></li> 
 
   </ul> 
   <div id="grad"> 
