--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@ li a {
     text-decoration: none;
 }
 
+.active {
+    background-color: #ff9933;
+}
 li a:hover:not(.active) {
     background-color: #e6e6e6;
 }
 
-li a.active {
-    background-color: #ff9933;
-}
+
 
 </style>
 </head>
