--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,11 @@
 height: 2000px;
 background-image: linear-gradient(to bottom right,#ffcccc,#ffe6cc,#ffffcc,#e6ffcc,#ccffcc, #ccffe6,#ccffff,#cce6ff,#ccccff,#e6ccff,#ffccff,#ffcce6,#ffcccc);
 }
+    
+#wb {
+height: 500px;
+background-color: white;
+}
 
 ul {
     list-style-type: none;
@@ -57,7 +62,7 @@ li a:hover:not(.active) {
     <br>
     <h1 style="text-align:center">About Me</h1>
     <p style="text-align:center;"><img src="images/me.JPG" height="200"></p>
-    <p style="text-align:center">This is me. Hi.</p>
+    <p style="text-align:center">This is me. Hi.<br>I'm a senior at RBHS.</p>
     <p style="text-align:center">Fun Fact About Me:<br>I'm short.</p>
     <br>
     <p style="text-align:center;"><img src="images/rg3.JPG" height="300"> <img src="images/rg1.JPG" height="300"> <img src="images/rg2.JPG" height="300"></p>
