--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 height: 2000px;
 background-image: linear-gradient(to bottom right,#ffcccc,#ffe6cc,#ffffcc,#e6ffcc,#ccffcc, #ccffe6,#ccffff,#cce6ff,#ccccff,#e6ccff,#ffccff,#ffcce6,#ffcccc);
 }
+    
+#wb1 {
+height: 400px;
+background-color: white;
+}
 
 ul {
     list-style-type: none;
@@ -57,8 +62,10 @@ li a:hover:not(.active) {
     <br>
     <br>
     <h1 style="text-align:center">Home Page</h1>
-    <p style="text-align:center;"><img src="images/home.jpg" height="300"></p>
-    <p style="text-align:center">I live here.</p>
+    <div id="wb1">  
+       <p style="text-align:center;"><img src="images/home.jpg" height="300"></p>
+       <p style="text-align:center">I live here.</p>
+    </div>
   </div>
   </body>
 </html>
