--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ li a:hover:not(.active) {
   <div id="grad"> 
     <br>
     <br>
-    <h1 style="text-align:center">Home Page</h1>  
+    <h1 style="text-align:center"><font face = "bush script mt", "arial">Home Page</font></h1>  
     <p style="text-align:center;"><img src="images/home.jpg" height="300"></p>
     <p style="text-align:center">I live here.</p>
   </div>
