--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <title>Home</title>
 <style>
 
+img {
+    border: 5px solid #555;
+    border-radius: 5%;
+}
+    
 #grad {
-height: 2000px;
-background-image: linear-gradient(to bottom right,#ffcccc,#ffe6cc,#ffffcc,#e6ffcc,#ccffcc, #ccffe6,#ccffff,#cce6ff,#ccccff,#e6ccff,#ffccff,#ffcce6,#ffcccc);
+    height: 2000px;
+    background-image: linear-gradient(to bottom right,#ffcccc,#ffe6cc,#ffffcc,#e6ffcc,#ccffcc, #ccffe6,#ccffff,#cce6ff,#ccccff,#e6ccff,#ffccff,#ffcce6,#ffcccc);
 }
 
 ul {
@@ -56,7 +61,7 @@ li a:hover:not(.active) {
   <div id="grad"> 
     <br>
     <br>
-    <h1 style="text-align:center"><font face = "bush script mt", "arial">Home Page</font></h1>  
+    <h1 style="text-align:center">Home Page</font></h1>  
     <p style="text-align:center;"><img src="images/home.jpg" height="300"></p>
     <p style="text-align:center">I live here.</p>
   </div>
