--- a/aboutme.html
+++ b/aboutme.html
@@ -6,8 +6,8 @@
 <style>
 
 img {
-    border: 5px solid #555;
-    border-radius: 5%;
+    border: 5px solid #ffffff;
+    border-radius: 2%;
 }
     
 #grad {
