--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,11 @@
     <title>Portfolio</title>
 <style>
 
+img {
+    border: 5px solid #ffffff;
+    border-radius: 2%;
+}
+    
 #grad {
 height: 2000px;
 background-image: linear-gradient(to bottom right,#ffcccc,#ffe6cc,#ffffcc,#e6ffcc,#ccffcc, #ccffe6,#ccffff,#cce6ff,#ccccff,#e6ccff,#ffccff,#ffcce6,#ffcccc);
