--- a/aboutme.html
+++ b/aboutme.html
@@ -52,7 +52,7 @@ li a:hover:not(.active) {
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 200px;
+  max-height: 400px;
   margin: auto;
 }
 
