--- a/aboutme.html
+++ b/aboutme.html
@@ -165,6 +165,14 @@ li a:hover:not(.active) {
 <div style="text-align:center">
   <span class="dot"></span> 
   <span class="dot"></span> 
+  <span class="dot"></span>
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
   <span class="dot"></span> 
 </div>
 
