--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>About Me</title>
 <style>
 
 img {
@@ -55,7 +55,6 @@ li a:hover:not(.active) {
 .slideshow-container {
   max-height: 300px;
   margin: auto;
-  text-align: center;
 }
 
 /* Number text (1/3 etc) */
@@ -105,7 +104,8 @@ li a:hover:not(.active) {
     <p style="text-align:center">This is me. Hi.<br>I'm a senior at RBHS.</p>
     <p style="text-align:center">Fun Fact About Me:<br>I'm short.</p>
     <br>
-    <div class="slideshow-container">
+
+<div class="slideshow-container", style="text-align: center">
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 11</div>
