--- a/survey.html
+++ b/survey.html
@@ -5,10 +5,8 @@
     <title>Portfolio</title>
 <style>
 
-body {margin:0;}
-
 #grad {
-height: 1000px;
+height: 2000px;
 background-image: linear-gradient(to bottom right,#ffcccc,#ffe6cc,#ffffcc,#e6ffcc,#ccffcc, #ccffe6,#ccffff,#cce6ff,#ccccff,#e6ccff,#ffccff,#ffcce6,#ffcccc);
 }
 
@@ -40,8 +38,7 @@ li a:hover {
 }
 
 .active {
-    color: black;
-    background-color: #ffc6b3;
+    background-color: #ff9933;
 }
 
 </style>
@@ -51,8 +48,8 @@ li a:hover {
     <li><a href="index.html">Home</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
     <li><a href="aboutme.html">About Me</a></li>
-    <li><a href="mysister.html">My Sister</a></li>
     <li><a href="survey.html">My Surveys</a></li> 
+      
   </ul> 
   <div id="grad"> 
     <br>   
