--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@ li a:hover:not(.active) {
     <br>   
     <br>
     <h1 style="text-align:center">Portfolio</h1>
-    <p style="text-align:center;"><img src="images/1.1.9 pic1.jpg" height="50"></p>
+    <p style="text-align:center;"><img src="images/1.1.9 pic1.jpg" height="50"><img src="images/1.1.9 pic2.jpg" height="50"><img src="images/1.1.9 pic3.jpg" height="50"><img src="images/1.1.9 pic4.jpg" height="50"></p>
     <p style="text-align:center">We created a program that made objects move in a pattern in an infinite loop.
         First, we imported the Turtle and Math classes. After that, we created two empty lists
         <br>for the sets of shape objects that we were going to use, those being “left_shapes” and “right_shapes”. Then we made lists for the shapes and colors of the 
