--- a/portfolio.html
+++ b/portfolio.html
@@ -6,14 +6,10 @@
 <style>
 
 img {
-    border: 5px solid #ffffff;
-    border-radius: 2%;
+    border: 0px solid #ffffff;
+    border-radius: 0%;
 }
 
-img0 {
-    border: 0px
-    border-radius: 0%
-}
     
 #grad {
 height: 2000px;
@@ -65,9 +61,9 @@ li a:hover:not(.active) {
     <br>   
     <br>
     <h1 style="text-align:center">Portfolio</h1>
-    <p style="text-align:center;"><img0 src="images/1.1.9 pic1.jpg" height="70"><img0 src="images/1.1.9 pic2.jpg" height="70"><img0 src="images/1.1.9 pic3.jpg" height="70"><img0 src="images/1.1.9 pic4.jpg" height="70"><img0 src="images/1.1.9 pic5.jpg" height="70"></p>
+    <p style="text-align:center;"><img src="images/1.1.9 pic1.jpg" height="70"><img src="images/1.1.9 pic2.jpg" height="70"><img src="images/1.1.9 pic3.jpg" height="70"><img src="images/1.1.9 pic4.jpg" height="70"><img src="images/1.1.9 pic5.jpg" height="70"></p>
     <p style="text-align:center">We created a program that made objects move in a pattern in an infinite loop.
-        First, we imported the Turtle and Math classes. After that, we created two empty lists for the sets
+        <br>First, we imported the Turtle and Math classes. After that, we created two empty lists for the sets
         <br>of shape objects that we were going to use, those being “left_shapes” and “right_shapes”. Then
         <br>we made lists for the shapes and colors of the objects that we used to initialize our objects. We
         <br>then added the shapes into their respective lists, colorized them, and moved them into their starting
@@ -80,10 +76,7 @@ li a:hover:not(.active) {
         <br>triangular path, they switched directions again and began to move toward each other after 
         <br>moving a predetermined distance after the first collision. When the objects collide for a second 
         <br>time, they go back to their original position repeat the same pattern in an infinite loop.
-</p>
-    <br>
-    <br>
-    <p style="text-align:center">This is where my projects will go.</p>
+
   </div>
   </body>
 </html>
