--- a/portfolio.html
+++ b/portfolio.html
@@ -61,6 +61,8 @@ li a:hover:not(.active) {
     <br>   
     <br>
     <h1 style="text-align:center">Portfolio</h1>
+    <br>
+    <h3 style="text-align:center">1.1.9. Project - Wacky Shapes and Colors</h3>
     <p style="text-align:center;"><img src="images/1.1.9 pic1.jpg" height="70"><img src="images/1.1.9 pic2.jpg" height="70"><img src="images/1.1.9 pic3.jpg" height="70"><img src="images/1.1.9 pic4.jpg" height="70"><img src="images/1.1.9 pic5.jpg" height="70"></p>
     <p style="text-align:center">We created a program that made objects move in a pattern in an infinite loop.
         <br>First, we imported the Turtle and Math classes. After that, we created two empty lists for the sets
