--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@ li a:hover:not(.active) {
     <h1 style="text-align:center">Portfolio</h1>
     <br>
     <h3 style="text-align:center">1.1.9. Project - Wacky Shapes and Colors</h3>
-    <p style="text-align:center;"><img src="images/1.1.9 pic1.jpg" height="70"><img src="images/1.1.9 pic2.jpg" height="70"><img src="images/1.1.9 pic3.jpg" height="70"><img src="images/1.1.9 pic4.jpg" height="70"><img src="images/1.1.9 pic5.jpg" height="70"></p>
+    <p style="text-align:center;"><img src="images/1.1.9 pic1.jpg" height="70"> <img src="images/1.1.9 pic2.jpg" height="70"> <img src="images/1.1.9 pic3.jpg" height="70"> <img src="images/1.1.9 pic4.jpg" height="70"> <img src="images/1.1.9 pic5.jpg" height="70"></p>
     <p style="text-align:center">We created a program that made objects move in a pattern in an infinite loop.
         <br>First, we imported the Turtle and Math classes. After that, we created two empty lists for the sets
         <br>of shape objects that we were going to use, those being “left_shapes” and “right_shapes”. Then
@@ -76,8 +76,8 @@ li a:hover:not(.active) {
         <br>direction. We stored the original colors and shapes of the objects in variables so that we could 
         <br>revert them to their original conditions after the second collision. Because the objects followed a 
         <br>triangular path, they switched directions again and began to move toward each other after 
-        <br>moving a predetermined distance after the first collision. When the objects collide for a second 
-        <br>time, they go back to their original position repeat the same pattern in an infinite loop.
+        <br>moving a predetermined distance after the first collision. After the objects collided for a second 
+        <br>time, they went back to their original position and restart original pattern for the next set of objects.
 
   </div>
   </body>
