--- a/portfolio.html
+++ b/portfolio.html
@@ -78,6 +78,11 @@ li a:hover:not(.active) {
         <br>triangular path, they switched directions again and began to move toward each other after 
         <br>moving a predetermined distance after the first collision. After the objects collided for a second 
         <br>time, they went back to their original position and restart original pattern for the next set of objects.
+        <br>
+        <br>
+    <h3 style="text-align:center">1.3.1. Project - Meteor</h3>
+    <p style="text-align:center;"><img src="images/1.3.1.jpg" height="70"> <img src="images/1.3.1 pic2.jpg" height="70"> <img src="images/1.3.1 pic3.jpg" height="70"> </p>
+    <p style="text-align:center">
 
   </div>
   </body>
