--- a/portfolio.html
+++ b/portfolio.html
@@ -77,12 +77,26 @@ li a:hover:not(.active) {
         <br>revert them to their original conditions after the second collision. Because the objects followed a 
         <br>triangular path, they switched directions again and began to move toward each other after 
         <br>moving a predetermined distance after the first collision. After the objects collided for a second 
-        <br>time, they went back to their original position and restart original pattern for the next set of objects.
+        <br>time, they went back to their original position and restart original pattern for the next set of objects.</p>
         <br>
         <br>
     <h3 style="text-align:center">1.3.1. Project - Meteor</h3>
-    <p style="text-align:center;"><img src="images/1.3.1.jpg" height="70"> <img src="images/1.3.1 pic2.jpg" height="70"> <img src="images/1.3.1 pic3.jpg" height="70"> </p>
-    <p style="text-align:center">
+    <p style="text-align:center;"><img src="images/1.3.1 pic1jpg" height="70"> <img src="images/1.3.1 pic2.jpg" height="70"> <img src="images/1.3.1 pic3.jpg" height="70"> </p>
+    <p style="text-align:center">The was the original outline:
+        <br>Game has a UFO, aliens, and rocks. There is also a timer and a score component. The UFO can move
+        <br>around using keyboard controls. The score increases when you “rescue” (collide with) an alien.
+        <br>Depending on which game mode (survival or infinite), colliding with a rock will either end the game or
+        <br>cause your score to decrease. In infinite mode, the timer is set to 9,999 seconds and in survival mode the 
+        <br>timer is about 1 minute.
+        <br>
+        <br>That didn't really work, so here's the greatly simplified outline:
+        <br>Game has one UFO turtle, one alien turtle, and a list of shapes for the alien turtle. There is still
+        <br>a timer and a score component, the UFO still moves around using keyboard controls, and the score 
+        <br>still increases when you "rescue" collide with) an alien. HOWEVER, there is only one game mode and zero
+        <br>rocks (placement of rocks was too complicated). 
+        <br>To play the game, move the UFO around and try to rescue aliens. When you "rescue" an alien, your score 
+        <br>increases by 1 and another alien with a different shape appears in a different location. Keep rescuing 
+        <br>aliens until the timer runs out.</p>
 
   </div>
   </body>
