--- a/portfolio.html
+++ b/portfolio.html
@@ -81,8 +81,8 @@ li a:hover:not(.active) {
         <br>
         <br>
     <h3 style="text-align:center">1.3.1. Project - Meteor</h3>
-    <p style="text-align:center;"><img src="images/1.3.1 pic1.jpg" height="130"> <img src="images/1.3.1 pic2.jpg" height="130"> <img src="images/1.3.1 pic3.jpg" height="130"> </p>
-    <p style="text-align:center">The was the original outline:
+    <p style="text-align:center;"><img src="images/1.3.1 pic1.jpg" height="140"> <img src="images/1.3.1 pic2.jpg" height="140"> <img src="images/1.3.1 pic3.jpg" height="140"> </p>
+    <p style="text-align:center">This was the original outline:
         <br>Game has a UFO, aliens, and rocks. There is also a timer and a score component. The UFO can move
         <br>around using keyboard controls. The score increases when you “rescue” (collide with) an alien.
         <br>Depending on which game mode (survival or infinite), colliding with a rock will either end the game or
