--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@ li a:hover:not(.active) {
         <br>time, they went back to their original position and restart original pattern for the next set of objects.</p>
         <br>
         <br>
-    <h3 style="text-align:center">1.3.1. Project - Meteor</h3>
+    <h3 style="text-align:center">1.3.1. Project - Alien Rescue</h3>
     <p style="text-align:center;"><img src="images/1.3.1 pic1.jpg" height="140"> <img src="images/1.3.1 pic2.jpg" height="140"> <img src="images/1.3.1 pic3.jpg" height="140"> </p>
     <p style="text-align:center">This was the original outline:
         <br>Game has a UFO, aliens, and rocks. There is also a timer and a score component. The UFO can move
