--- a/portfolio.html
+++ b/portfolio.html
@@ -92,8 +92,8 @@ li a:hover:not(.active) {
         <br>That didn't really work, so here's the greatly simplified outline:
         <br>Game has one UFO turtle, one alien turtle, and a list of shapes for the alien turtle. There is still
         <br>a timer and a score component, the UFO still moves around using keyboard controls, and the score 
-        <br>still increases when you "rescue" collide with) an alien. HOWEVER, there is only one game mode and zero
-        <br>rocks (placement of rocks was too complicated). 
+        <br>still increases when you "rescue" (collide with) an alien. HOWEVER, there is only one game mode and zero
+        <br>rocks (placement of rocks such that there was no overlapping between all turtles was too complicated). 
         <br>To play the game, move the UFO around and try to rescue aliens. When you "rescue" an alien, your score 
         <br>increases by 1 and another alien with a different shape appears in a different location. Keep rescuing 
         <br>aliens until the timer runs out.</p>
