--- a/portfolio.html
+++ b/portfolio.html
@@ -80,8 +80,8 @@ li a:hover:not(.active) {
         <br>time, they went back to their original position and restart original pattern for the next set of objects.</p>
         <br>
         <br>
-    <h3 style="text-align:center">1.3.1. Project - Alien Rescue</h3>
-    <p style="text-align:center;"><img src="images/1.3.1 pic1.jpg" height="140"> <img src="images/1.3.1 pic2.jpg" height="140"> <img src="images/1.3.1 pic3.jpg" height="140"> </p>
+    <h3 style="text-align:center">1.2.5. Project - Alien Rescue</h3>
+    <p style="text-align:center;"><img src="images/1.2.5 pic1.jpg" height="140"> <img src="images/1.2.5 pic2.jpg" height="140"> <img src="images/1.2.5 pic3.jpg" height="140"> </p>
     <p style="text-align:center">This was the original outline:
         <br>Game has a UFO, aliens, and rocks. There is also a timer and a score component. The UFO can move
         <br>around using keyboard controls. The score increases when you “rescue” (collide with) an alien.
@@ -97,6 +97,11 @@ li a:hover:not(.active) {
         <br>To play the game, move the UFO around and try to rescue aliens. When you "rescue" an alien, your score 
         <br>increases by 1 and another alien with a different shape appears in a different location. Keep rescuing 
         <br>aliens until the timer runs out.</p>
+        <br>
+        <br>
+    <h3 style="text-align:center">1.3.1. Project - Cannonball</h3>
+    <p style="text-align:center;"><img src="images/1.3.1 pic1.jpg" height="140"> <img src="images/1.3.1 pic2.jpg" height="140"> <img src="images/1.3.1 pic3.jpg" height="140"> </p>
+    <p style="text-align:center">description here>/p>
 
   </div>
   </body>
