--- a/portfolio.html
+++ b/portfolio.html
@@ -100,9 +100,17 @@ li a:hover:not(.active) {
         <br>
         <br>
     <h3 style="text-align:center">1.3.1. Project - Cannonball</h3>
-    <p style="text-align:center;"><img src="images/1.3.1 pic1.jpg" height="140"> <img src="images/1.3.1 pic2.jpg" height="140"> <img src="images/1.3.1 pic3.jpg" height="140"> </p>
-    <p style="text-align:center">description here>/p>
-
+        <p style="text-align:center"><a href="https://drive.google.com/file/d/1Q59XJXnmkkBNDORAyzvd5fztWLB__TSn/view?usp=sharing" target="blank">Video of Project</a></p>
+    <p style="text-align:center;"><img src="images/1.3.1 pic2.jpg" height="140"> <img src="images/1.3.1 pic3.jpg" height="140"> <img src="images/1.3.1 pic4.jpg" height="140"> </p>
+    <p style="text-align:center">We created the game Cannonball, in which a user controls and adjusts a cannon to shoot a
+        <br>cannonball at targets moving across the screen. The targets are spawned at random heights at the right 
+        <br>boundary of the game screen and move at random speeds toward the left side of the screen. When the user 
+        <br>successfully hits a target, the target disappears, a new target is created, and the user's score increases. 
+        <br>Regardless of whether or not the cannonball hits or misses a target, it continues on its straight path 
+        <br>until it reaches the game's top or right boundary and is returned to it's original position at the cannon. 
+        <br>If a target reaches the left boundary, the game is over.
+        <br>We also created four game modes: easy, normal, hard, and super hard. As the game modes increase in difficulty,
+        <br>the targets get smaller in size and move more quickly, and the cannonball gets smaller in size.
   </div>
   </body>
 </html>
