--- a/aboutme.html
+++ b/aboutme.html
@@ -100,7 +100,7 @@ li a:hover:not(.active) {
     <br>
     <br>
     <h1 style="text-align:center">About Me</h1>
-    <p style="text-align:center;"><img src="images/me.JPG" height="200"></p>
+    <p style="text-align:center;"><img src="images/m.JPG" height="200"></p>
     <p style="text-align:center">This is me. Hi.<br>I'm a senior at RBHS.</p>
     <p style="text-align:center">Fun Fact About Me:<br>I'm short.</p>
     <br>
@@ -182,7 +182,7 @@ li a:hover:not(.active) {
     <p style="text-align:center">I used to do rhythmic gymnastics. <br>Check out my gym's website if you're bored: <a href="http://emeraldcityrhythmics.com/" target="blank">Emerald City Rhythmics</a></p>
     <p style="text-align:center">I also used to do aesthetic group gymnastics.</p>
     <br>
-    <p style="text-align:center;"><img src="images/estonia3.jpg" height="300"> <img src="images/estonia1.jpg" height="300"> <img src="images/estonia2.jpg" height="300"></p>
+    <p style="text-align:center;"><img src="images/estonia1.jpg" height="300"></p>
     <p style="text-align:center">I went to Estonia one time. It was cool.</p>
     <br>
       
