--- a/aboutme.html
+++ b/aboutme.html
@@ -100,7 +100,7 @@ li a:hover:not(.active) {
     <br>
     <br>
     <h1 style="text-align:center">About Me</h1>
-    <p style="text-align:center;"><img src="images/mee.JPG" height="200"></p>
+    <p style="text-align:center;"><img src="images/mee.jpg" height="200"></p>
     <p style="text-align:center">This is me. Hi.<br>I'm a senior at RBHS.</p>
     <p style="text-align:center">Fun Fact About Me:<br>I'm short.</p>
     <br>
