--- a/portfolio.html
+++ b/portfolio.html
@@ -6,9 +6,10 @@
 <style>
 
 img {
-    border: 0px solid #ffffff;
+    border: 5px solid #ffffff;
     border-radius: 2%;
-}
+    max-height: 300px;
+} 
 
     
 #grad {
