--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ li a:hover:not(.active) {
     <br>
     <br>
     <h1 style="text-align:center">Home Page</font></h1>  
-    <p style="text-align:center;"><img src="images/home.jpg" height="300"></p>
-    <p style="text-align:center">I live here.</p>
+    <p style="text-align:center;"><img src="images/eif.gif" height="300"></p>
+    <p style="text-align:center">Everything is fine.</p>
 
   </div>
   </body>
