--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ li a:hover:not(.active) {
     <br>
     <h1 style="text-align:center">Home Page</font></h1>  
     <p style="text-align:center;"><img src="images/eif.gif" height="300"></p>
-    <p style="text-align:center">Everything is fine.</p>
+      <p style="text-align:center"><font face = "Comic sans MS">Everything is fine.</font></p>
 
   </div>
   </body>
