--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@ li a:hover:not(.active) {
     <br>
     <h1 style="text-align:center">Home Page</font></h1>  
     <p style="text-align:center;"><img src="images/eif.gif" height="300"></p>
-      <!-- comment --><p style="text-align:center"><font face = "Comic sans MS">Everything is fine.</font></p>
-    <br>
     <p style="text-align:center;"><img src="images/sp.gif" height="300"> <img src="images/dk.gif" height="300"></p>
-
+    <p style="text-align:center"><font face = "Comic sans MS">Greetings</font></p>
+      
   </div>
   </body>
 </html>
