--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@ li a:hover:not(.active) {
 </head>
   <body> 
   <ul>  
-    <li><a href="index.html">Home</a></li>
-    <li><a href="portfolio.html">Portfolio</a></li>
-    <li><a href="aboutme.html">About Me</a></li>
-    <li><a href="survey.html">My Surveys</a></li>
+    <li><a href="index.html"><font face="Comic sans MS">Home</font></a></li>
+    <li><a href="portfolio.html"><font face="Comic sans MS">Portfolio</font></a></li>
+    <li><a href="aboutme.html"><font face="Comic sans MS">About Me</font></a></li>
+    <li><a href="survey.html"><font face="Comic sans MS">My Surveys</font></a></li>
      
   </ul> 
   <div id="grad"> 
     <br>
     <br>
-    <h1 style="text-align:center">Home Page</font></h1>  
+    <h1 style="text-align:center"><font face="Comic sans MS">Home Page</font></h1>  
     <p style="text-align:center;"><img src="images/eif.gif" height="300"></p>
     <p style="text-align:center;"><img src="images/sp.gif" height="300"> <img src="images/dk.gif" height="300"></p>
     <p style="text-align:center"><font face="Comic sans MS" size=15>Greetings.</font></p>
