--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ li a:hover:not(.active) {
     <h1 style="text-align:center"><font face="Comic sans MS">Home Page</font></h1>  
     <p style="text-align:center;"><img src="images/eif.gif" height="300"></p>
     <p style="text-align:center;"><img src="images/sp.gif" height="300"> <img src="images/dk.gif" height="300"></p>
-    <p style="text-align:center"><font face="Comic sans MS" size=15>Greetings.</font></p>
-    <p style="text-align:center"><font face="Comic sans MS" size=10>Welcome to my website.</font></p>
+    <p style="text-align:center"><font face="Comic sans MS">Greetings.</font></p>
+    <p style="text-align:center"><font face="Comic sans MS">Welcome to my website.</font></p>
       
   </div>
   </body>
