--- a/aboutme.html
+++ b/aboutme.html
@@ -90,19 +90,19 @@ li a:hover:not(.active) {
 </head>
   <body> 
   <ul>  
-    <li><a href="index.html">Home</a></li>
-    <li><a href="portfolio.html">Portfolio</a></li>
-    <li><a href="aboutme.html">About Me</a></li>
-    <li><a href="survey.html">My Surveys</a></li>
+    <li><a href="index.html"><font face="Comic sans MS">Home</font></a></li>
+    <li><a href="portfolio.html"><font face="Comic sans MS">Portfolio</font></a></li>
+    <li><a href="aboutme.html"><font face="Comic sans MS">About Me</font></a></li>
+    <li><a href="survey.html"><font face="Comic sans MS">My Surveys</font></a></li>
 
   </ul> 
   <div id="grad"> 
     <br>
     <br>
-    <h1 style="text-align:center">About Me</h1>
+    <h1 style="text-align:center"><font face="Comic sans MS">About Me</font</h1>
     <p style="text-align:center;"><img src="images/mee.jpg" height="200"></p>
-    <p style="text-align:center">This is me. Hi.<br>I'm a senior at RBHS.</p>
-    <p style="text-align:center">Fun Fact About Me:<br>I'm short.</p>
+    <p style="text-align:center"><font face="Comic sans MS">This is me. Hi.<br>I'm a senior at RBHS.</font></p>
+        <p style="text-align:center"><font face="Comic sans MS">Fun Fact About Me:<br>I'm short.</font></p>
     <br>
 
 <div class="slideshow-container", style="text-align: center">
@@ -179,11 +179,11 @@ li a:hover:not(.active) {
 </div>
 
     <br>  
-    <p style="text-align:center">I used to do rhythmic gymnastics. <br>Check out my gym's website if you're bored: <a href="http://emeraldcityrhythmics.com/" target="blank">Emerald City Rhythmics</a></p>
-    <p style="text-align:center">I also used to do aesthetic group gymnastics.</p>
+    <p style="text-align:center"><font face="Comic sans MS">I used to do rhythmic gymnastics. <br>Check out my gym's website if you're bored: <a href="http://emeraldcityrhythmics.com/" target="blank">Emerald City Rhythmics</a></font></p>
+    <p style="text-align:center"><font face="Comic sans MS">I also used to do aesthetic group gymnastics.</font></p>
     <br>
     <p style="text-align:center;"><img src="images/estonia1.jpg" height="300"></p>
-    <p style="text-align:center">I went to Estonia one time. It was cool.</p>
+    <p style="text-align:center"><font face="Comic sans MS">I went to Estonia one time. It was cool.</font></p>
     <br>
       
   <script>
