--- a/portfolio.html
+++ b/portfolio.html
@@ -52,20 +52,20 @@ li a:hover:not(.active) {
 </head>
   <body>
   <ul>    
-    <li><a href="index.html">Home</a></li>
-    <li><a href="portfolio.html">Portfolio</a></li>
-    <li><a href="aboutme.html">About Me</a></li>
-    <li><a href="survey.html">My Surveys</a></li>
+    <li><a href="index.html"><font face="Comic sans MS">Home</font></a></li>
+    <li><a href="portfolio.html"><font face="Comic sans MS">Portfolio</font></a></li>
+    <li><a href="aboutme.html"><font face="Comic sans MS">About Me</font></a></li>
+    <li><a href="survey.html"><font face="Comic sans MS">My Surveys</font></a></li>
  
   </ul> 
   <div id="grad"> 
     <br>   
     <br>
-    <h1 style="text-align:center">Portfolio</h1>
+      <h1 style="text-align:center"><font face="Comic sans MS">Portfolio</font></h1>
     <br>
-    <h3 style="text-align:center">1.1.9. Project - Wacky Shapes and Colors</h3>
+    <h3 style="text-align:center"><font face="Comic sans MS">1.1.9. Project - Wacky Shapes and Colors</font></h3>
     <p style="text-align:center;"><img src="images/1.1.9 pic1.jpg" height="70"> <img src="images/1.1.9 pic2.jpg" height="70"> <img src="images/1.1.9 pic3.jpg" height="70"> <img src="images/1.1.9 pic4.jpg" height="70"> <img src="images/1.1.9 pic5.jpg" height="70"></p>
-    <p style="text-align:center">We created a program that made objects move in a pattern in an infinite loop.
+    <p style="text-align:center"><font face="Comic sans MS">We created a program that made objects move in a pattern in an infinite loop.
         <br>First, we imported the Turtle and Math classes. After that, we created two empty lists for the sets
         <br>of shape objects that we were going to use, those being “left_shapes” and “right_shapes”. Then
         <br>we made lists for the shapes and colors of the objects that we used to initialize our objects. We
@@ -78,12 +78,12 @@ li a:hover:not(.active) {
         <br>revert them to their original conditions after the second collision. Because the objects followed a 
         <br>triangular path, they switched directions again and began to move toward each other after 
         <br>moving a predetermined distance after the first collision. After the objects collided for a second 
-        <br>time, they went back to their original position and restart original pattern for the next set of objects.</p>
+        <br>time, they went back to their original position and restart original pattern for the next set of objects.</font></p>
         <br>
         <br>
-    <h3 style="text-align:center">1.2.5. Project - Alien Rescue</h3>
+      <h3 style="text-align:center"><font face="Comic sans MS">1.2.5. Project - Alien Rescue</font></h3>
     <p style="text-align:center;"><img src="images/1.2.5 pic1.jpg" height="140"> <img src="images/1.2.5 pic2.jpg" height="140"> <img src="images/1.2.5 pic3.jpg" height="140"> </p>
-    <p style="text-align:center">This was the original outline:
+    <p style="text-align:center"><font face="Comic sans MS">This was the original outline:
         <br>Game has a UFO, aliens, and rocks. There is also a timer and a score component. The UFO can move
         <br>around using keyboard controls. The score increases when you “rescue” (collide with) an alien.
         <br>Depending on which game mode (survival or infinite), colliding with a rock will either end the game or
@@ -97,13 +97,13 @@ li a:hover:not(.active) {
         <br>rocks (placement of rocks such that there was no overlapping between all turtles was too complicated). 
         <br>To play the game, move the UFO around and try to rescue aliens. When you "rescue" an alien, your score 
         <br>increases by 1 and another alien with a different shape appears in a different location. Keep rescuing 
-        <br>aliens until the timer runs out.</p>
+        <br>aliens until the timer runs out.</font></p>
         <br>
         <br>
-    <h3 style="text-align:center">1.3.1. Project - Cannonball</h3>
+      <h3 style="text-align:center"><font face="Comic sans MS">1.3.1. Project - Cannonball</font></h3>
         <p style="text-align:center"><a href="https://drive.google.com/file/d/1Q59XJXnmkkBNDORAyzvd5fztWLB__TSn/view?usp=sharing" target="blank">Video of Project</a></p>
     <p style="text-align:center;"><img src="images/1.3.1 pic2.jpg" height="140"> <img src="images/1.3.1 pic3.jpg" height="140"> <img src="images/1.3.1 pic4.jpg" height="140"> </p>
-    <p style="text-align:center">We created the game Cannonball, in which a user controls and adjusts a cannon to shoot a
+    <p style="text-align:center"><font face="Comic sans MS">We created the game Cannonball, in which a user controls and adjusts a cannon to shoot a
         <br>cannonball at targets moving across the screen. The targets are spawned at random heights at the right 
         <br>boundary of the game screen and move at random speeds toward the left side of the screen. When the user 
         <br>successfully hits a target, the target disappears, a new target is created, and the user's score increases. 
@@ -111,7 +111,7 @@ li a:hover:not(.active) {
         <br>until it reaches the game's top or right boundary and is returned to it's original position at the cannon. 
         <br>If a target reaches the left boundary, the game is over.
         <br>We also created four game modes: easy, normal, hard, and super hard. As the game modes increase in difficulty,
-        <br>the targets get smaller in size and move more quickly, and the cannonball gets smaller in size.
+        <br>the targets get smaller in size and move more quickly, and the cannonball gets smaller in size.</font></p>
   </div>
   </body>
 </html>
