--- a/survey.html
+++ b/survey.html
@@ -45,20 +45,20 @@ li a:hover {
 </head>
   <body>
   <ul>    
-    <li><a href="index.html">Home</a></li>
-    <li><a href="portfolio.html">Portfolio</a></li>
-    <li><a href="aboutme.html">About Me</a></li>
-    <li><a href="survey.html">My Surveys</a></li> 
+    <li><a href="index.html"><font face="Comic sans MS">Home</font></a></li>
+    <li><a href="portfolio.html"><font face="Comic sans MS">Portfolio</font></a></li>
+    <li><a href="aboutme.html"><font face="Comic sans MS">About Me</font></a></li>
+    <li><a href="survey.html"><font face="Comic sans MS">My Surveys</font></a></li>
       
   </ul> 
   <div id="grad"> 
     <br>   
     <br>
-    <h1 style="text-align:center">My surveys</h1>
-    <p style="text-align:center">I made a few surveys for fun.<br>You can take them if you want.<br>They're pretty boring.</p>
-    <p style="text-align:center"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfQMQiKXLJgQLoKqA0L3yUxQs6DUxMn2-0JlCMDEmQqSCrw5A/viewform?usp=sf_link" target="blank">Survey 1</a></p>
+    <h1 style="text-align:center"><font face="Comic sans MS">My surveys</font></h1>
+    <p style="text-align:center"><font face="Comic sans MS">I made a few surveys for fun.<br>You can take them if you want.<br>They're pretty boring.</font></p>
+    <p style="text-align:center"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfQMQiKXLJgQLoKqA0L3yUxQs6DUxMn2-0JlCMDEmQqSCrw5A/viewform?usp=sf_link" target="blank"><font face="Comic sans MS">Survey 1</font></a></p>
     <br>
-    <p style="text-align:center"><a href="https://docs.google.com/forms/d/e/1FAIpQLScFXW47k1S5HOW-cNpo3xKJIli-qX_FF2e9VteIfmVci61i_Q/viewform?usp=sf_link" target="blank">Survey 2</a></p>
+    <p style="text-align:center"><a href="https://docs.google.com/forms/d/e/1FAIpQLScFXW47k1S5HOW-cNpo3xKJIli-qX_FF2e9VteIfmVci61i_Q/viewform?usp=sf_link" target="blank"><font face="Comic sans MS">Survey 2</font></a></p>
     <br>
     <br>
     <br>
