--- a/aboutme.html
+++ b/aboutme.html
@@ -99,10 +99,10 @@ li a:hover:not(.active) {
   <div id="grad"> 
     <br>
     <br>
-    <h1 style="text-align:center"><font face="Comic sans MS">About Me</font</h1>
+    <h1 style="text-align:center"><font face="Comic sans MS">About Me</font></h1>
     <p style="text-align:center;"><img src="images/mee.jpg" height="200"></p>
-    <p style="text-align:center"><font face="Comic sans MS">This is me. Hi.<br>I'm a senior at RBHS.</font></p>
-        <p style="text-align:center"><font face="Comic sans MS">Fun Fact About Me:<br>I'm short.</font></p>
+    <p style="text-align:center"><font face="Comic sans MS">Hello there.<br>I'm a senior at RBHS.</font></p>
+    <p style="text-align:center"><font face="Comic sans MS">Fun Fact About Me:<br>I like dark chocolate.</font></p>
     <br>
 
 <div class="slideshow-container", style="text-align: center">
