--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ li a:hover:not(.active) {
     <br>
     <br>
     <h1 style="text-align:center"><font face="Comic sans MS">Home Page</font></h1>  
+    <br>
     <h2 style="text-align:center"><font face="Comic sans MS">Greetings.</font></h2>
     <h3 style="text-align:center"><font face="Comic sans MS">Welcome to my website.</font></h3>
     <h1 style="text-align:center"><font face="Comic sans MS">Happy Holidays!</font><h1>
@@ -69,7 +70,7 @@ li a:hover:not(.active) {
     <br>
     <p style="text-align:center;"><img src="images/eif.gif" height="300"></p>
     <p style="text-align:center;"><img src="images/sp.gif" height="300"> <img src="images/dk.gif" height="300"></p>
-    <h6 style="text-align:center"><font face="Comic sans MS">~ t h e   h o l y   t r i n i t y ~</font></h6>   
+    <h6 style="text-align:center"><font face="Comic sans MS">~ t h e ~ h o l y ~ t r i n i t y ~</font></h6>   
   </div>
   </body>
 </html>
