--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@ li a:hover:not(.active) {
         <br>
         <br>
       <h3 style="text-align:center"><font face="Comic sans MS">1.3.1. Project - Cannonball</font></h3>
-        <p style="text-align:center"><a href="https://drive.google.com/file/d/1Q59XJXnmkkBNDORAyzvd5fztWLB__TSn/view?usp=sharing" target="blank">Video of Project</a></p>
+        <p style="text-align:center"><a href="https://drive.google.com/file/d/1Q59XJXnmkkBNDORAyzvd5fztWLB__TSn/view?usp=sharing" target="blank"><font face="Comic sans MS">Video of Project</font></a></p>
     <p style="text-align:center;"><img src="images/1.3.1 pic2.jpg" height="140"> <img src="images/1.3.1 pic3.jpg" height="140"> <img src="images/1.3.1 pic4.jpg" height="140"> </p>
     <p style="text-align:center"><font face="Comic sans MS">We created the game Cannonball, in which a user controls and adjusts a cannon to shoot a
         <br>cannonball at targets moving across the screen. The targets are spawned at random heights at the right 
