--- a/aboutme.html
+++ b/aboutme.html
@@ -102,7 +102,7 @@ li a:hover:not(.active) {
     <h1 style="text-align:center"><font face="Comic sans MS">About Me</font></h1>
     <p style="text-align:center;"><img src="images/mee.jpg" height="200"></p>
     <p style="text-align:center"><font face="Comic sans MS">Hello there.<br>I'm a senior at RBHS.</font></p>
-    <p style="text-align:center"><font face="Comic sans MS">Fun Fact About Me:<br>I like dark chocolate.</font></p>
+    <p style="text-align:center"><font face="Comic sans MS">Fun Facts About Me:<br>I like dark chocolate, and I have a younger sister.</font></p>
     <br>
 
 <div class="slideshow-container", style="text-align: center">
