--- a/portfolio.html
+++ b/portfolio.html
@@ -112,6 +112,12 @@ li a:hover:not(.active) {
         <br>If a target reaches the left boundary, the game is over.
         <br>We also created four game modes: easy, normal, hard, and super hard. As the game modes increase in difficulty,
         <br>the targets get smaller in size and move more quickly, and the cannonball gets smaller in size.</font></p>
+        <br>
+        <br>
+      <h3 style="text-align:center"><font face="Comic sans MS">Scratch Project - New York City Tour</font></h3>
+        <p style="text-align:center"><a href="https://scratch.mit.edu/projects/462158386" target="blank"><font face="Comic sans MS">Link to Project</font></a></p>
+    <p style="text-align:center;"><img src="images/.jpg" height="140"> <img src="images/.jpg" height="140"> <img src="images/.jpg" height="140"> </p>
+    <p style="text-align:center"><font face="Comic sans MS"></font></p>
   </div>
   </body>
 </html>
