--- a/portfolio.html
+++ b/portfolio.html
@@ -115,9 +115,8 @@ li a:hover:not(.active) {
         <br>
         <br>
       <h3 style="text-align:center"><font face="Comic sans MS">Scratch Project - New York City Tour</font></h3>
-        <p style="text-align:center"><a href="https://scratch.mit.edu/projects/462158386" target="blank"><font face="Comic sans MS">Link to Project</font></a></p>
-    <p style="text-align:center;"><img src="images/.jpg" height="140"> <img src="images/.jpg" height="140"> <img src="images/.jpg" height="140"> </p>
+        <p style="text-align:center"><iframe src="https://scratch.mit.edu/projects/462158386/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></p>
     <p style="text-align:center"><font face="Comic sans MS"></font></p>
-  </div>
+      
   </body>
 </html>
