--- a/portfolio.html
+++ b/portfolio.html
@@ -115,8 +115,11 @@ li a:hover:not(.active) {
         <br>
         <br>
       <h3 style="text-align:center"><font face="Comic sans MS">Scratch Project - New York City Tour</font></h3>
+      <p style="text-align:center"><font face="Comic sans MS">Story Directions: Enter your name, and press spacebar to start</font></p>
         <p style="text-align:center"><iframe src="https://scratch.mit.edu/projects/462158386/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></p>
-    <p style="text-align:center"><font face="Comic sans MS"></font></p>
+      <p style="text-align:center"><font face="Comic sans MS">We created a story in Scratch. It follows a tour guide and a tourist on a short tour
+        <br>through New York City. Places visited include the MET, Times Square, and the Statue of Liberty.
+        </font></p>
       
   </body>
 </html>
