--- a/portfolio.html
+++ b/portfolio.html
@@ -117,8 +117,10 @@ li a:hover:not(.active) {
       <h3 style="text-align:center"><font face="Comic sans MS">Scratch Project - New York City Tour</font></h3>
       <p style="text-align:center"><font face="Comic sans MS">Story Directions: Enter your name, and press spacebar to start</font></p>
         <p style="text-align:center"><iframe src="https://scratch.mit.edu/projects/462158386/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></p>
-      <p style="text-align:center"><font face="Comic sans MS">We created a story in Scratch. It follows a tour guide and a tourist on a short tour
-        <br>through New York City. Places visited include the MET, Times Square, and the Statue of Liberty.
+      <h5 style="text-align:center"><font face="Comic sans MS">NOTE: Do not visit other sites or leave this browser window while the story is running.
+          <br>Doing so will cause the program to lag.</font></h5>
+      <p style="text-align:center"><font face="Comic sans MS">We created a story in Scratch. It follows a tour guide and a tourist on a short tour around
+        <br>New York City. Places visited include the MET, Times Square, and the Statue of Liberty.
         </font></p>
       
   </body>
