--- a/portfolio.html
+++ b/portfolio.html
@@ -121,7 +121,13 @@ li a:hover:not(.active) {
           <br>Doing so will cause the program to lag.</font></h5>
       <p style="text-align:center"><font face="Comic sans MS">We created a story in Scratch. It follows a tour guide and a tourist on a short tour around
         <br>New York City. Places visited include the MET, Times Square, and the Statue of Liberty.
-        </font></p>
-      
+        <br>Our story included animation, multiple backgrounds, change of costumes, sounds, events, input, and a procedure.
+        <br>Animation: Characters walking
+        <br>Multiple backgrounds: Different parts of the city
+        <br>Change of costumes: Different positions to show characters walking
+        <br>Sounds: Background music (Frank Sinatra's "New York New York"), traffic noises, and ship bells
+        <br>Events: Program starts by clicking green flag, story starts by pressing space key
+        <br>Input: Ask for user name at beginning 
+        <br>Procedure: For tour guide walking</font></p>
   </body>
 </html>
