--- a/feedback.html
+++ b/feedback.html
@@ -55,7 +55,7 @@ li a:hover {
   <div id="grad"> 
     <br>   
     <br>
-    <h1 style="text-align:center"><font face="Comic sans MS">Feedback Page</font></h1>
+    <h1 style="text-align:center"><font face="Comic sans MS">Feedback Form</font></h1>
     <br>
     <p style="text-align:center"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfYVAS5YE2urhNwdeU20QL9vm9u-1AoufhPZ_PsRpcVvw2YcA/viewform?embedded=true" width="640" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
   </div>
